...
    android:layout_height="match_parent"
    android:requiresFadingEdge="vertical"
    android:fadingEdgeLength="30dp"

    android:background="?attr/colorDefaultBackground"

    android:id="@+id/add_mood_root"
    android:fillViewport="false"
    xmlns:android="http://schemas.android.com/apk/res/android" >


        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
...
                android:textColor="?attr/colorDefaultText"
                android:textSize="16sp"

                app:layout_constraintTop_toBottomOf="@id/date_display"
                app:layout_constraintStart_toStartOf="@id/date_display"
                app:layout_constraintEnd_toEndOf="@id/date_display"
                app:layout_constraintBottom_toTopOf="@id/mood_selection_buttons" />


            <!-- MOOD SELECTION BUTTONS -->
            <TextView
                android:id="@+id/mood_message"

...
                app:layout_constraintTop_toBottomOf="@id/time_display"
                app:layout_constraintStart_toStartOf="@id/mood_message"
                app:layout_constraintEnd_toEndOf="@id/mood_message"
                app:layout_constraintBottom_toTopOf="@id/additional_info_message" >

                <Button
                    android:id="@+id/happy_mood_button"
                    android:layout_row="0"
                    android:layout_column="0"
                    android:layout_gravity="fill"
                    android:backgroundTint="@color/colorHappy"
                    android:drawableLeft="@drawable/ic_happy_icon_24dp"
                    android:onClick="selectMoodButton"
                    android:text="HAPPY"
                    android:textColor="#000000" />

                <Button
                    android:id="@+id/sad_mood_button"
                    android:layout_row="0"
                    android:layout_column="1"
                    android:layout_gravity="fill"
                    android:backgroundTint="@color/colorSad"
                    android:drawableLeft="@drawable/ic_sad_icon_24dp"
                    android:onClick="selectMoodButton"
                    android:text="SAD"
                    android:textColor="#000000" />

                <Button
                    android:id="@+id/surprised_mood_button"
                    android:layout_row="1"
                    android:layout_column="1"
                    android:layout_gravity="fill"
                    android:backgroundTint="@color/colorSurprised"
                    android:drawableLeft="@drawable/ic_surprised_icon_24dp"
                    android:onClick="selectMoodButton"
                    android:text="SURPRISED"
                    android:textColor="#000000" />

                <Button
                    android:id="@+id/afraid_mood_button"
                    android:layout_row="1"
                    android:layout_column="0"
                    android:layout_gravity="fill"
                    android:backgroundTint="@color/colorAfraid"
                    android:drawableLeft="@drawable/ic_afraid_icon_24dp"
                    android:onClick="selectMoodButton"
                    android:text="AFRAID"
                    android:textColor="#000000" />

                <Button
                    android:id="@+id/disgusted_mood_button"
                    android:layout_row="2"
                    android:layout_column="0"
                    android:layout_gravity="fill"
                    android:backgroundTint="@color/colorDisgusted"
                    android:drawableLeft="@drawable/ic_disgusted_icon_24dp"
                    android:onClick="selectMoodButton"
                    android:text="DISGUSTED"
                    android:textColor="#000000" />

                <Button
                    android:id="@+id/angry_mood_button"
                    android:layout_row="2"
                    android:layout_column="1"
                    android:layout_gravity="fill"
                    android:backgroundTint="@color/colorAngry"
                    android:drawableLeft="@drawable/ic_angry_icon_24dp"
                    android:onClick="selectMoodButton"
                    android:text="ANGRY"
                    android:textColor="#000000" />

            </GridLayout>
            <!-- END MOOD SELECTION BUTTONS -->


...
                android:drawableLeft="@drawable/ic_near_me_black_24dp"

                android:gravity="center"
                android:onClick="getLocation"

                android:text="Attach Current Location (optional)"
                app:layout_constraintBottom_toTopOf="@id/save_mood_event_button"
                app:layout_constraintEnd_toEndOf="@id/mood_selection_buttons"
                app:layout_constraintStart_toStartOf="@id/mood_selection_buttons"
                app:layout_constraintTop_toBottomOf="@id/photo_info" />


            <!-- CREATE MOOD EVENT BUTTON -->
...
                android:layout_height="wrap_content"

                android:layout_marginTop="16dp"

                android:onClick="saveMoodEvent"

                android:text="Save Mood Event"
                app:layout_constraintBottom_toTopOf="@id/delete_mood_event_button"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/location_button" />

            <!-- CREATE MOOD EVENT BUTTON -->
...
