...
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:backgroundTint="@color/colorSecondary"

        android:text="Apply Filter"
        android:onClick="applyFilters"
        android:layout_gravity="center" />

</LinearLayout>
