...
                app:layout_constraintEnd_toEndOf="@+id/profile_menu_item"
                app:layout_constraintBottom_toBottomOf="parent"/>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </com.google.android.material.bottomappbar.BottomAppBar>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_add_white_72dp"
        android:background="#00000000"
        app:backgroundTint="?attr/colorFloatingActionButton"
        app:fabCustomSize="64dp"
...
