package com.gittfo.moodtracker.views;


import android.view.View;
import android.view.ViewGroup;
import android.view.ViewParent;

import androidx.test.espresso.ViewInteraction;
import androidx.test.filters.LargeTest;
import androidx.test.platform.app.InstrumentationRegistry;
import androidx.test.rule.ActivityTestRule;
import androidx.test.runner.AndroidJUnit4;

import com.gittfo.moodtracker.database.Database;

import org.hamcrest.Description;
import org.hamcrest.Matcher;
import org.hamcrest.TypeSafeMatcher;
import org.hamcrest.core.IsInstanceOf;
import org.junit.Ignore;
import org.junit.Rule;
import org.junit.Test;
import org.junit.runner.RunWith;

import static android.content.Context.MODE_PRIVATE;
import static androidx.test.espresso.Espresso.onView;
import static androidx.test.espresso.action.ViewActions.click;
import static androidx.test.espresso.action.ViewActions.scrollTo;
import static androidx.test.espresso.assertion.ViewAssertions.matches;
import static androidx.test.espresso.matcher.ViewMatchers.isDisplayed;
import static androidx.test.espresso.matcher.ViewMatchers.withClassName;
import static androidx.test.espresso.matcher.ViewMatchers.withContentDescription;
import static androidx.test.espresso.matcher.ViewMatchers.withId;
import static androidx.test.espresso.matcher.ViewMatchers.withText;
import static org.hamcrest.Matchers.allOf;
import static org.hamcrest.Matchers.is;

@LargeTest
@RunWith(AndroidJUnit4.class)
public class FilterMoodTest {

    @Rule
    public ActivityTestRule<MainActivity> mActivityTestRule = new ActivityTestRule<MainActivity>(MainActivity.class, true, true) {

        @Override
        protected void beforeActivityLaunched() {
            InstrumentationRegistry.getInstrumentation().getTargetContext().getSharedPreferences(Database.PREFS, MODE_PRIVATE)
                    .edit()
                    .putString("user", "105648403813593449833")
                    .apply();


        }
    };

    @Ignore
    @Test
    public void filterMoodTest() {

        ViewInteraction floatingActionButton = onView(
                allOf(withId(R.id.fab),
                        childAtPosition(
                                childAtPosition(
                                        withClassName(is("androidx.constraintlayout.widget.ConstraintLayout")),
                                        0),
                                2),
                        isDisplayed()));
        floatingActionButton.perform(click());

        ViewInteraction materialButton = onView(
                allOf(withId(R.id.happy_mood_button), withText("HAPPY"),
                        childAtPosition(
                                allOf(withId(R.id.mood_selection_buttons),
                                        childAtPosition(
                                                withClassName(is("androidx.constraintlayout.widget.ConstraintLayout")),
                                                5)),
                                0)));
        materialButton.perform(scrollTo(), click());

        ViewInteraction materialButton2 = onView(
                allOf(withId(R.id.save_mood_event_button), withText("Save Mood Event"),
                        childAtPosition(
                                childAtPosition(
                                        withId(R.id.add_mood_root),
                                        0),
                                14)));
        materialButton2.perform(scrollTo(), click());

        ViewInteraction floatingActionButton2 = onView(
                allOf(withId(R.id.fab),
                        childAtPosition(
                                childAtPosition(
                                        withClassName(is("androidx.constraintlayout.widget.ConstraintLayout")),
                                        0),
                                2),
                        isDisplayed()));
        floatingActionButton2.perform(click());

        ViewInteraction materialButton3 = onView(
                allOf(withId(R.id.sad_mood_button), withText("SAD"),
                        childAtPosition(
                                allOf(withId(R.id.mood_selection_buttons),
                                        childAtPosition(
                                                withClassName(is("androidx.constraintlayout.widget.ConstraintLayout")),
                                                5)),
                                1)));
        materialButton3.perform(scrollTo(), click());

        ViewInteraction materialButton4 = onView(
                allOf(withId(R.id.save_mood_event_button), withText("Save Mood Event"),
                        childAtPosition(
                                childAtPosition(
                                        withId(R.id.add_mood_root),
                                        0),
                                14)));
        materialButton4.perform(scrollTo(), click());

        ViewInteraction floatingActionButton3 = onView(
                allOf(withId(R.id.fab),
                        childAtPosition(
                                childAtPosition(
                                        withClassName(is("androidx.constraintlayout.widget.ConstraintLayout")),
                                        0),
                                2),
                        isDisplayed()));
        floatingActionButton3.perform(click());

        ViewInteraction materialButton5 = onView(
                allOf(withId(R.id.sad_mood_button), withText("SAD"),
                        childAtPosition(
                                allOf(withId(R.id.mood_selection_buttons),
                                        childAtPosition(
                                                withClassName(is("androidx.constraintlayout.widget.ConstraintLayout")),
                                                5)),
                                1)));
        materialButton5.perform(scrollTo(), click());

        ViewInteraction materialButton6 = onView(
                allOf(withId(R.id.save_mood_event_button), withText("Save Mood Event"),
                        childAtPosition(
                                childAtPosition(
                                        withId(R.id.add_mood_root),
                                        0),
                                14)));
        materialButton6.perform(scrollTo(), click());

        ViewInteraction floatingActionButton4 = onView(
                allOf(withId(R.id.fab),
                        childAtPosition(
                                childAtPosition(
                                        withClassName(is("androidx.constraintlayout.widget.ConstraintLayout")),
                                        0),
                                2),
                        isDisplayed()));
        floatingActionButton4.perform(click());

        ViewInteraction materialButton7 = onView(
                allOf(withId(R.id.afraid_mood_button), withText("AFRAID"),
                        childAtPosition(
                                allOf(withId(R.id.mood_selection_buttons),
                                        childAtPosition(
                                                withClassName(is("androidx.constraintlayout.widget.ConstraintLayout")),
                                                5)),
                                3)));
        materialButton7.perform(scrollTo(), click());

        ViewInteraction materialButton8 = onView(
                allOf(withId(R.id.save_mood_event_button), withText("Save Mood Event"),
                        childAtPosition(
                                childAtPosition(
                                        withId(R.id.add_mood_root),
                                        0),
                                14)));
        materialButton8.perform(scrollTo(), click());

        ViewInteraction floatingActionButton5 = onView(
                allOf(withId(R.id.fab),
                        childAtPosition(
                                childAtPosition(
                                        withClassName(is("androidx.constraintlayout.widget.ConstraintLayout")),
                                        0),
                                2),
                        isDisplayed()));
        floatingActionButton5.perform(click());

        ViewInteraction materialButton9 = onView(
                allOf(withId(R.id.afraid_mood_button), withText("AFRAID"),
                        childAtPosition(
                                allOf(withId(R.id.mood_selection_buttons),
                                        childAtPosition(
                                                withClassName(is("androidx.constraintlayout.widget.ConstraintLayout")),
                                                5)),
                                3)));
        materialButton9.perform(scrollTo(), click());

        ViewInteraction materialButton10 = onView(
                allOf(withId(R.id.save_mood_event_button), withText("Save Mood Event"),
                        childAtPosition(
                                childAtPosition(
                                        withId(R.id.add_mood_root),
                                        0),
                                14)));
        materialButton10.perform(scrollTo(), click());

        ViewInteraction floatingActionButton6 = onView(
                allOf(withId(R.id.fab),
                        childAtPosition(
                                childAtPosition(
                                        withClassName(is("androidx.constraintlayout.widget.ConstraintLayout")),
                                        0),
                                2),
                        isDisplayed()));
        floatingActionButton6.perform(click());

        ViewInteraction materialButton11 = onView(
                allOf(withId(R.id.afraid_mood_button), withText("AFRAID"),
                        childAtPosition(
                                allOf(withId(R.id.mood_selection_buttons),
                                        childAtPosition(
                                                withClassName(is("androidx.constraintlayout.widget.ConstraintLayout")),
                                                5)),
                                3)));
        materialButton11.perform(scrollTo(), click());

        ViewInteraction materialButton12 = onView(
                allOf(withId(R.id.save_mood_event_button), withText("Save Mood Event"),
                        childAtPosition(
                                childAtPosition(
                                        withId(R.id.add_mood_root),
                                        0),
                                14)));
        materialButton12.perform(scrollTo(), click());

        ViewInteraction floatingActionButton7 = onView(
                allOf(withId(R.id.fab),
                        childAtPosition(
                                childAtPosition(
                                        withClassName(is("androidx.constraintlayout.widget.ConstraintLayout")),
                                        0),
                                2),
                        isDisplayed()));
        floatingActionButton7.perform(click());

        ViewInteraction materialButton13 = onView(
                allOf(withId(R.id.surprised_mood_button), withText("SURPRISED"),
                        childAtPosition(
                                allOf(withId(R.id.mood_selection_buttons),
                                        childAtPosition(
                                                withClassName(is("androidx.constraintlayout.widget.ConstraintLayout")),
                                                5)),
                                2)));
        materialButton13.perform(scrollTo(), click());

        ViewInteraction materialButton14 = onView(
                allOf(withId(R.id.save_mood_event_button), withText("Save Mood Event"),
                        childAtPosition(
                                childAtPosition(
                                        withId(R.id.add_mood_root),
                                        0),
                                14)));
        materialButton14.perform(scrollTo(), click());

        ViewInteraction floatingActionButton8 = onView(
                allOf(withId(R.id.fab),
                        childAtPosition(
                                childAtPosition(
                                        withClassName(is("androidx.constraintlayout.widget.ConstraintLayout")),
                                        0),
                                2),
                        isDisplayed()));
        floatingActionButton8.perform(click());

        ViewInteraction materialButton15 = onView(
                allOf(withId(R.id.disgusted_mood_button), withText("DISGUSTED"),
                        childAtPosition(
                                allOf(withId(R.id.mood_selection_buttons),
                                        childAtPosition(
                                                withClassName(is("androidx.constraintlayout.widget.ConstraintLayout")),
                                                5)),
                                4)));
        materialButton15.perform(scrollTo(), click());

        ViewInteraction materialButton16 = onView(
                allOf(withId(R.id.save_mood_event_button), withText("Save Mood Event"),
                        childAtPosition(
                                childAtPosition(
                                        withId(R.id.add_mood_root),
                                        0),
                                14)));
        materialButton16.perform(scrollTo(), click());

        ViewInteraction floatingActionButton9 = onView(
                allOf(withId(R.id.fab),
                        childAtPosition(
                                childAtPosition(
                                        withClassName(is("androidx.constraintlayout.widget.ConstraintLayout")),
                                        0),
                                2),
                        isDisplayed()));
        floatingActionButton9.perform(click());

        ViewInteraction materialButton17 = onView(
                allOf(withId(R.id.disgusted_mood_button), withText("DISGUSTED"),
                        childAtPosition(
                                allOf(withId(R.id.mood_selection_buttons),
                                        childAtPosition(
                                                withClassName(is("androidx.constraintlayout.widget.ConstraintLayout")),
                                                5)),
                                4)));
        materialButton17.perform(scrollTo(), click());

        ViewInteraction materialButton18 = onView(
                allOf(withId(R.id.save_mood_event_button), withText("Save Mood Event"),
                        childAtPosition(
                                childAtPosition(
                                        withId(R.id.add_mood_root),
                                        0),
                                14)));
        materialButton18.perform(scrollTo(), click());

        ViewInteraction floatingActionButton10 = onView(
                allOf(withId(R.id.fab),
                        childAtPosition(
                                childAtPosition(
                                        withClassName(is("androidx.constraintlayout.widget.ConstraintLayout")),
                                        0),
                                2),
                        isDisplayed()));
        floatingActionButton10.perform(click());

        ViewInteraction materialButton19 = onView(
                allOf(withId(R.id.angry_mood_button), withText("ANGRY"),
                        childAtPosition(
                                allOf(withId(R.id.mood_selection_buttons),
                                        childAtPosition(
                                                withClassName(is("androidx.constraintlayout.widget.ConstraintLayout")),
                                                5)),
                                5)));
        materialButton19.perform(scrollTo(), click());

        ViewInteraction materialButton20 = onView(
                allOf(withId(R.id.save_mood_event_button), withText("Save Mood Event"),
                        childAtPosition(
                                childAtPosition(
                                        withId(R.id.add_mood_root),
                                        0),
                                14)));
        materialButton20.perform(scrollTo(), click());

        ViewInteraction materialButton21 = onView(
                allOf(withId(R.id.toolbar_filter_button), withText("FILTER"),
                        childAtPosition(
                                childAtPosition(
                                        withId(R.id.profile_toolbar),
                                        0),
                                0),
                        isDisplayed()));
        materialButton21.perform(click());

        ViewInteraction materialButton22 = onView(
                allOf(withId(R.id.happy_mood_button), withText("HAPPY"),
                        childAtPosition(
                                allOf(withId(R.id.mood_selection_buttons),
                                        childAtPosition(
                                                withClassName(is("android.widget.LinearLayout")),
                                                0)),
                                0),
                        isDisplayed()));
        materialButton22.perform(click());

        ViewInteraction materialButton23 = onView(
                allOf(withText("Apply Filter"),
                        childAtPosition(
                                childAtPosition(
                                        withId(R.id.custom),
                                        0),
                                1),
                        isDisplayed()));
        materialButton23.perform(click());

        ViewInteraction textView = onView(
                allOf(withId(R.id.user_mood_textView), withText("HAPPY"),
                        childAtPosition(
                                childAtPosition(
                                        IsInstanceOf.<View>instanceOf(android.widget.LinearLayout.class),
                                        0),
                                3),
                        isDisplayed()));
        textView.check(matches(withText("HAPPY")));

        ViewInteraction materialButton24 = onView(
                allOf(withId(R.id.toolbar_filter_button), withText("FILTER"),
                        childAtPosition(
                                childAtPosition(
                                        withId(R.id.profile_toolbar),
                                        0),
                                0),
                        isDisplayed()));
        materialButton24.perform(click());

        ViewInteraction materialButton25 = onView(
                allOf(withId(R.id.sad_mood_button), withText("SAD"),
                        childAtPosition(
                                allOf(withId(R.id.mood_selection_buttons),
                                        childAtPosition(
                                                withClassName(is("android.widget.LinearLayout")),
                                                0)),
                                1),
                        isDisplayed()));
        materialButton25.perform(click());

        ViewInteraction materialButton26 = onView(
                allOf(withId(R.id.happy_mood_button), withText("HAPPY"),
                        childAtPosition(
                                allOf(withId(R.id.mood_selection_buttons),
                                        childAtPosition(
                                                withClassName(is("android.widget.LinearLayout")),
                                                0)),
                                0),
                        isDisplayed()));
        materialButton26.perform(click());

        ViewInteraction materialButton27 = onView(
                allOf(withText("Apply Filter"),
                        childAtPosition(
                                childAtPosition(
                                        withId(R.id.custom),
                                        0),
                                1),
                        isDisplayed()));
        materialButton27.perform(click());

        ViewInteraction textView2 = onView(
                allOf(withId(R.id.user_mood_textView), withText("SAD"),
                        childAtPosition(
                                childAtPosition(
                                        IsInstanceOf.<View>instanceOf(android.widget.LinearLayout.class),
                                        0),
                                3),
                        isDisplayed()));
        textView2.check(matches(withText("SAD")));

        ViewInteraction textView3 = onView(
                allOf(withId(R.id.user_mood_textView), withText("SAD"),
                        childAtPosition(
                                childAtPosition(
                                        IsInstanceOf.<View>instanceOf(android.widget.LinearLayout.class),
                                        0),
                                3),
                        isDisplayed()));
        textView3.check(matches(withText("SAD")));

        ViewInteraction materialButton28 = onView(
                allOf(withId(R.id.toolbar_filter_button), withText("FILTER"),
                        childAtPosition(
                                childAtPosition(
                                        withId(R.id.profile_toolbar),
                                        0),
                                0),
                        isDisplayed()));
        materialButton28.perform(click());

        ViewInteraction materialButton29 = onView(
                allOf(withId(R.id.afraid_mood_button), withText("AFRAID"),
                        childAtPosition(
                                allOf(withId(R.id.mood_selection_buttons),
                                        childAtPosition(
                                                withClassName(is("android.widget.LinearLayout")),
                                                0)),
                                3),
                        isDisplayed()));
        materialButton29.perform(click());

        ViewInteraction materialButton30 = onView(
                allOf(withId(R.id.sad_mood_button), withText("SAD"),
                        childAtPosition(
                                allOf(withId(R.id.mood_selection_buttons),
                                        childAtPosition(
                                                withClassName(is("android.widget.LinearLayout")),
                                                0)),
                                1),
                        isDisplayed()));
        materialButton30.perform(click());

        ViewInteraction materialButton31 = onView(
                allOf(withText("Apply Filter"),
                        childAtPosition(
                                childAtPosition(
                                        withId(R.id.custom),
                                        0),
                                1),
                        isDisplayed()));
        materialButton31.perform(click());

        ViewInteraction textView4 = onView(
                allOf(withId(R.id.user_mood_textView), withText("AFRAID"),
                        childAtPosition(
                                childAtPosition(
                                        IsInstanceOf.<View>instanceOf(android.widget.LinearLayout.class),
                                        0),
                                3),
